Fix navbar collapse with mobile devices

--- a/css/small-device.css
+++ b/css/small-device.css
@@ -1,103 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900);
 
-#title {
-  color: #4c4d4f;
-  font-family: 'Lato', sans-serif;
-  font-size: 10em;
-  text-align: center;
-  margin-top: 40%;
-}
-
-.contact {
-  color: #e05a4c;
-  font-family: 'Lato', sans-serif;
-  text-align: center;
-}
-
-.contact a {
-    color: #e05a4c;
-    text-decoration: none;
-    letter-spacing: .25em;
-    font-size: .8em;
-}
-
-.contact-sep {
-  display: none;
-}
-
-.contact-break {
-  display: inline;
-}
-
-
-/******** Menu Styling *******/
-
-
-.menu {
-  background-color: #282c34;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  display: none;
-  float:right;
-  height: 100%;
-  min-width: 400px;
-  z-index: 10;
-}
-
-.menu li a {
-  text-decoration: none;
-  font-family: sans-serif;
-  color: #f6f6f6;
-  text-transform: uppercase;
-  font-size: 3em;
-}
-
-.menu li {
-  list-style: none;
-  padding: 5% 0 5% 0%;
-  margin-top: 10%;
-}
-
-.menu-close {
-  cursor: pointer;
-  float: right;
-  height: 40px;
-  width: auto;
-  margin: 30px 35px 0 0;
-}
-
-.menu-btn {
-  cursor: pointer;
-  font-family: sans-serif;
-  color: #4c4d4f;
-  text-transform: uppercase;
-  font-size: 2em;
-  position: fixed;
-  top: 30px;
-  right: 35px;
-  z-index: 5;
-}
-
 /******** Content Styling *******/
 
 .content {
-    width: 80%;
-    margin-top: 20%;
-    margin-left: 10%;
-    color: #4c4d4f;
-    font-family: sans-serif;
-    font-size: 1.5em;
-    line-height: 135%;
-}
-
-.content a {
-  color: #4a8c56;
-  text-decoration: none;
-}
-
-.content .pre {
-  margin-left: 15%;
+    margin-top: 30% !important;
 }
 
 /******** Tic Tac Toe Styling *******/
